@@ -30,16 +30,13 @@ public class ArrayOperations {
         return array;
     }
 
-    public List<Integer> intersectionV2(int[] nums1, int[] nums2) {
+    public List<Integer> intersectionV2(Integer[] nums1, Integer[] nums2) {
 
-        checkConstraints(nums1);
-        checkConstraints(nums2);
+        checkConstraints2(nums1);
+        checkConstraints2(nums2);
 
-        //Set set1 = new HashSet<>(Arrays.asList(nums1));
-        Set set2 = new HashSet<>(Arrays.asList(nums2));
-
-
-        Set set1 = Set.of(nums1);
+        Set<Integer> set1 = Set.of(nums1);
+        Set<Integer> set2 = Set.of(nums2);
 
         Set result = new HashSet(set1);
         result.retainAll(set2);
@@ -50,6 +47,13 @@ public class ArrayOperations {
     /*
      */
     private void checkConstraints(int[] nums1) {
+        if (nums1.length> LIMIT_LENGTH_ARRAY) throw new ArrayOperationsException("Exception Limit for array");
+        Arrays.stream(nums1).forEach(n->{
+            if(n> LIMIT_ELEMENT_ARRAY)throw new ArrayOperationsException("Exception Limit for array element");
+        });
+    }
+
+    private void checkConstraints2(Integer[] nums1) {
         if (nums1.length> LIMIT_LENGTH_ARRAY) throw new ArrayOperationsException("Exception Limit for array");
         Arrays.stream(nums1).forEach(n->{
             if(n> LIMIT_ELEMENT_ARRAY)throw new ArrayOperationsException("Exception Limit for array element");
